--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
 </head>
 <body>
     
@@ -27,8 +27,8 @@
         <h2 class="col-8"><span id="computer"></span></h2>
         <div class="col-1"></div>
         <div class="score col-3">
-            <p>Wins:<span id="wins"></span></p>
-            <p>Loses:<span id="loses"></span></p>
+            <p>Wins:<span id="winns"></span></p>
+            <p>Loses:<span id="losses"></span></p>
         </div>
         </div>
     </div>
@@ -40,8 +40,11 @@
         <input type="image" src="assets/images/crystal4.jpg" width="100" height="100" id="c4">
     </div>
 
-    <h3>Your total score is:<span id="userTotal"></span></h3>
+    <div class="userTotal">
+    <h3>Your total score is: </h3>
     <h2 class="user"><span id="userAdd"></span></h2>
-
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
